<package>
    <name>turtlebot3_location</name>
    <version>1.0.0</version>
    <description>

        This package provides implementations of the location and move in  robots.

    </description>
    <author>LiGao</author>
    <maintainer email="lg16@qq.com">LiGao</maintainer>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>Eigen</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>roslaunch</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>Eigen</run_depend>
</package>
